--- a/Web_Client/src/app/feature/user-companies/user-companies.component.html
+++ b/Web_Client/src/app/feature/user-companies/user-companies.component.html
@@ -5,8 +5,8 @@
 </div>
 
 <div class="search-container">
-  <input type="text" [(ngModel)]="search" placeholder="Tìm kiếm tên công ty" />
-  <button class="search-btn" (click)="searchCompanies()">Tìm kiếm</button>
+  <input type="text" [(ngModel)]="searchTerm" (ngModelChange)="searchCompanies()"
+    placeholder="Tìm kiếm công ty theo tên, địa chỉ hoặc SĐT" />
 </div>
 
 <!-- Form for creating/editing company -->
@@ -16,57 +16,29 @@
     <h3>{{ isEditing ? "Chỉnh sửa công ty" : "Tạo công ty mới" }}</h3>
 
     <div class="form-group">
-      <label for="companyName"
-        >Tên công ty: <span class="required">*</span></label
-      >
-      <input
-        type="text"
-        id="companyName"
-        [(ngModel)]="currentCompany.name"
-        required
-        minlength="1"
-        pattern="[^\\s].*"
-      />
+      <label for="companyName">Tên công ty: <span class="required">*</span></label>
+      <input type="text" id="companyName" [(ngModel)]="currentCompany.name" required minlength="1" pattern="[^\\s].*" />
     </div>
 
     <div class="form-group">
       <label for="companyDescription">Mô tả:</label>
-      <textarea
-        id="companyDescription"
-        [(ngModel)]="currentCompany.description"
-        rows="3"
-      ></textarea>
+      <textarea id="companyDescription" [(ngModel)]="currentCompany.description" rows="3"></textarea>
     </div>
 
     <div class="form-group">
       <label for="companyAddress">Địa chỉ:</label>
-      <input
-        type="text"
-        id="companyAddress"
-        [(ngModel)]="currentCompany.address"
-      />
+      <input type="text" id="companyAddress" [(ngModel)]="currentCompany.address" />
     </div>
 
     <div class="form-group">
       <label for="companyEmail">Email:</label>
-      <input
-        type="email"
-        id="companyEmail"
-        [(ngModel)]="currentCompany.email"
-        pattern="[^\s@]+@[^\s@]+\.[^\s@]+"
-      />
+      <input type="email" id="companyEmail" [(ngModel)]="currentCompany.email" pattern="[^\s@]+@[^\s@]+\.[^\s@]+" />
     </div>
 
     <div class="form-group">
       <label for="companyPhone">Số điện thoại:</label>
-      <input
-        type="tel"
-        id="companyPhone"
-        [(ngModel)]="currentCompany.phoneNumber"
-        pattern="[0-9]{10}"
-        maxlength="10"
-        oninput="this.value = this.value.replace(/[^0-9]/g, '')"
-      />
+      <input type="tel" id="companyPhone" [(ngModel)]="currentCompany.phoneNumber" pattern="[0-9]{10}" maxlength="10"
+        oninput="this.value = this.value.replace(/[^0-9]/g, '')" />
     </div>
 
     <!-- <div class="form-group">
@@ -95,20 +67,13 @@
   <div class="companies">
     <div class="company" *ngFor="let company of paginatedCompanies">
       <div class="company-content">
-        <img
-          [src]="company.logo || 'assets/images/slide1.jpg'"
-          alt="{{ company.name }}"
-          class="company-logo clickable"
-          [routerLink]="['/company', company.id]"
-        />
+        <img [src]="company.logo || 'assets/images/slide1.jpg'" alt="{{ company.name }}" class="company-logo clickable"
+          [routerLink]="['/company', company.id]" />
         <span class="company-name">{{ company.name }}</span>
         <div class="company-details" *ngIf="company.description">
           <p class="company-description">{{ company.description }}</p>
         </div>
-        <div
-          class="company-contact"
-          *ngIf="company.address || company.email || company.phoneNumber"
-        >
+        <div class="company-contact" *ngIf="company.address || company.email || company.phoneNumber">
           <p *ngIf="company.address">
             <strong>Địa chỉ:</strong> {{ company.address }}
           </p>
@@ -120,13 +85,10 @@
           </p>
         </div>
         <div class="company-status">
-          <span
-            class="status-badge"
-            [ngClass]="{
+          <span class="status-badge" [ngClass]="{
               active: company.status === 1,
               paused: company.status === 0
-            }"
-          >
+            }">
             {{ company.status === 1 ? "Hoạt động" : "Tạm ngưng" }}
           </span>
         </div>
@@ -144,22 +106,16 @@
     <button (click)="goToPage(currentPage - 1)" [disabled]="currentPage === 1">
       Previous
     </button>
-    <button
-      *ngFor="let page of [].constructor(totalPages); let i = index"
-      (click)="goToPage(i + 1)"
-      [class.active]="currentPage === i + 1"
-    >
+    <button *ngFor="let page of [].constructor(totalPages); let i = index" (click)="goToPage(i + 1)"
+      [class.active]="currentPage === i + 1">
       {{ i + 1 }}
     </button>
-    <button
-      (click)="goToPage(currentPage + 1)"
-      [disabled]="currentPage === totalPages"
-    >
+    <button (click)="goToPage(currentPage + 1)" [disabled]="currentPage === totalPages">
       Next
     </button>
   </div>
 </div>
 
 <ng-template #noResults>
-  <p>Bạn chưa có công ty nào. Hãy tạo công ty mới!</p>
+  <p>Không có công ty nào</p>
 </ng-template>
