fix mo ta va css cty

--- a/Web_Client/src/app/feature/user-companies/user-companies.component.html
+++ b/Web_Client/src/app/feature/user-companies/user-companies.component.html
@@ -130,6 +130,7 @@
         />
         <span class="company-name">{{ company.name }}</span>
         <div class="company-details" *ngIf="company.description">
+          <strong>Mô tả: </strong>
           <p class="company-description">{{ company.description }}</p>
         </div>
         <div
