--- a/Web_Client/src/app/components/favorite-jobs/favorite-jobs.component.html
+++ b/Web_Client/src/app/components/favorite-jobs/favorite-jobs.component.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="col-md-12">
       <div *ngIf="paginatedJobs.length === 0" class="alert alert-info">
-        Không có công việc phù hợp.
+        Không có công việc nào.
       </div>
 
       <div *ngFor="let job of paginatedJobs" class="post">
