--- a/Web_Client/src/app/feature/applied-jobs/applied-jobs.component.css
+++ b/Web_Client/src/app/feature/applied-jobs/applied-jobs.component.css
@@ -132,3 +132,15 @@ strong {
   border-radius: 5px;
   font-size: 16px;
 }
+
+.job-description,
+.job-address,
+.job-experience,
+.job-quantity,
+.job-status,
+.job-salary,
+.job-title {
+  font-size: 14px;
+  color: #555;
+  margin: 5px 0;
+}
