--- a/Web_Client/src/app/feature/company/company-list/company-list.component.html
+++ b/Web_Client/src/app/feature/company/company-list/company-list.component.html
@@ -27,6 +27,7 @@
         class="follow-btn"
         (click)="toggleFollow($event, company.id)"
         [class.followed]="isFollowing(company.id)"
+        *ngIf="isLoggedIn() && isCandidate()"
       >
         {{ isFollowing(company.id) ? "Bỏ theo dõi" : "Theo dõi" }}
       </button>
