--- a/Web_Client/src/core/navbar/navbar.component.html
+++ b/Web_Client/src/core/navbar/navbar.component.html
@@ -56,7 +56,7 @@
             <a href="/profile">Profile</a>
             <ng-container *ngIf="isCandidate()">
               <a routerLink="/favorite-jobs">Công việc yêu thích</a>
-              <a routerLink="/applied-jobs">Công việc ứng tuyển</a>
+              <a routerLink="/favorite-applied-jobs">Công việc ứng tuyển</a>
               <a routerLink="/favorite-companies">Công ty theo dõi</a>
               <a routerLink="/upload-cv">Upload CV</a>
             </ng-container>
