--- a/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.html
+++ b/Web_Client/src/app/feature/recruitment/recruitment-list/recruitment-list.component.html
@@ -31,12 +31,14 @@
       <!-- Hiển thị nút "Yêu thích" và "Bỏ yêu thích" chỉ khi người dùng có role là candidate -->
       <button class="favorite-btn" (click)="toggleJobFollow($event, post.id)" *ngIf="isLoggedIn() && isCandidate()"
         [style.color]="isJobFollowed(post.id) ? 'inherit' : 'red'">
+        <i class="fas" [ngClass]="{'fa-heart': isJobFollowed(post.id), 'fa-heart-o': !isJobFollowed(post.id)}"></i>
         {{ isJobFollowed(post.id) ? "Bỏ yêu thích" : "Yêu thích" }}
       </button>
 
       <!-- Hiển thị nút "Ứng tuyển ngay" chỉ khi người dùng có role là candidate -->
       <a class="apply-btn" style="cursor: pointer" (click)="onApply(post)" *ngIf="isLoggedIn() && isCandidate()">
-        Ứng tuyển ngay
+        <i class="fas fa-paper-plane"></i>
+        Ứng tuyển
       </a>
     </div>
     <p>{{ post.title }}</p>
