--- a/Web_Client/src/core/navbar/navbar.component.html
+++ b/Web_Client/src/core/navbar/navbar.component.html
@@ -58,7 +58,7 @@
               <a routerLink="/favorite-jobs">Công việc yêu thích</a>
               <a routerLink="/favorite-applied-jobs">Công việc ứng tuyển</a>
               <a routerLink="/favorite-companies">Công ty theo dõi</a>
-              <a routerLink="/upload-cv">Upload CV</a>
+              <a routerLink="/upload-cv">Tải CV của bạn</a>
             </ng-container>
             <ng-container *ngIf="isRecruiter()">
               <a routerLink="/user-companies">Công ty của tôi</a>
