--- a/Web_Client/src/app/components/favorite-companies/favorite-companies.component.css
+++ b/Web_Client/src/app/components/favorite-companies/favorite-companies.component.css
@@ -155,3 +155,22 @@ h2 {
   border-color: #bee5eb;
   color: #0c5460;
 }
+
+.recruitment-link {
+  display: inline-block;
+  margin-top: 10px;
+  color: #0d0e0f;
+  text-decoration: none;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.recruitment-link:hover {
+  text-decoration: none;
+  color: #0056b3;
+}
+
+.recruitment-link i {
+  margin-right: 6px;
+  color: #007bff;
+}
