--- a/Web_Client/src/app/feature/upload-cv/upload-cv.component.html
+++ b/Web_Client/src/app/feature/upload-cv/upload-cv.component.html
@@ -9,7 +9,7 @@
 
     <!-- Chỉ hiển thị nút upload khi không ở chế độ dialog -->
     <button *ngIf="!isDialog" class="upload-btn" (click)="onUpload()" [disabled]="!selectedFile">
-        Upload CV
+        Tải CV lên
     </button>
     <p class="file-support">Định dạng file hỗ trợ: PDF</p>
 
