--- a/Web_Client/src/app/components/favorite-jobs/favorite-jobs.component.html
+++ b/Web_Client/src/app/components/favorite-jobs/favorite-jobs.component.html
@@ -21,10 +21,12 @@
         <strong>{{ job.recruitment.type }}</strong>
         <div class="action-buttons">
           <button class="favorite-btn" (click)="toggleJobFollow($event, job.recruitment.id)" *ngIf="isLoggedIn()">
+            <i class="fa fa-heart"></i>
             Bỏ yêu thích
           </button>
           <a class="apply-btn" style="cursor: pointer" (click)="onApply(job.recruitment)" *ngIf="isLoggedIn()">
-            Ứng tuyển ngay
+            <i class="fas fa-paper-plane"></i>
+            Ứng tuyển
           </a>
         </div>
         <!-- Thêm các trường mới -->
