--- a/Web_Client/src/app/feature/recruitment/recruitment-detail/recruitment-detail.component.html
+++ b/Web_Client/src/app/feature/recruitment/recruitment-detail/recruitment-detail.component.html
@@ -1,6 +1,7 @@
 <button class="back-btn" (click)="goBack()">
     <i class="fas fa-arrow-left"></i>Quay lại
 </button>
+<h2>Chi tiết tuyển dụng</h2>
 <div class="job-detail-container">
     <div class="job-info">
         <div class="job-details">
