sửa vài thứ linh tinh

--- a/Web_Client/src/app/feature/recruiter/recruiter-edit/recruiter-edit.component.html
+++ b/Web_Client/src/app/feature/recruiter/recruiter-edit/recruiter-edit.component.html
@@ -1,4 +1,4 @@
-<h2>{{ isEditMode ? 'Edit Recruitment' : 'Add Recruitment' }}</h2>
+<h2>{{ isEditMode ? 'Chỉnh sửa' : 'Thêm bài' }}</h2>
 
 <form [formGroup]="recruitmentForm" (ngSubmit)="onSubmit()" class="container mt-3">
     <div class="row">
