--- a/Web_Client/src/app/feature/profile/profile.component.html
+++ b/Web_Client/src/app/feature/profile/profile.component.html
@@ -11,6 +11,12 @@
         <header>
             <h2>Welcome, {{ userProfile.fullName }}</h2>
         </header>
+        <div *ngIf="profileUpdated" class="alert alert-success">
+            Hồ sơ đã được cập nhật thành công!
+          </div>
+          <div *ngIf="errorMessage" class="alert alert-danger">
+            {{ errorMessage }}
+          </div>
         
         <div class="profile-card">
             <div class="user-info">
@@ -46,29 +52,8 @@
                 <textarea [(ngModel)]="userProfile.description"></textarea>
             </div>
         </div>
-
-        <div class="form-container" *ngIf="userProfile.roleId == 2">
-            <div class="form-group">
-                <label>Full Name</label>
-                <input type="text"  [(ngModel)]="userProfile.fullName">
-            </div>
-            <div class="form-group">
-                <label>Phone Number</label>
-                <input type="text" [(ngModel)]="userProfile.phoneNumber">
-            </div>
-            <div class="form-group">
-                <label>Email</label>
-                <input type="text" [(ngModel)]="userProfile.email">
-            </div>
-            <div class="form-group">
-                <label>Address</label>
-                <input type="text" [(ngModel)]="userProfile.address">
-            </div>
-            <div class="form-group">
-                <label>Personality</label>
-                <textarea [(ngModel)]="userProfile.description"></textarea>
-            </div>
-        </div>
+        
+        
 
         
     </div>
