--- a/Web_Client/src/app/feature/homepage/homepage.component.html
+++ b/Web_Client/src/app/feature/homepage/homepage.component.html
@@ -15,19 +15,26 @@
     <button class="next" (click)="nextSlide()">&#10095;</button>
   </div>
 
-  <div class="container">
-    <h2>Dashboard</h2>
-    <div class="dashboard">
-      <div class="stat-box">
-        <h3>Tổng số Công Ty</h3>
-        <p>{{ totalCompanies }}</p>
+  <div class="dashboard-container">
+    <div class="dashboard-header">
+      <span class="icon">📅</span>
+      <span class="title">Thống kê hôm nay: {{ currentDate }}</span>
+    </div>
+    
+    <div class="dashboard-content">
+      <div class="dashboard-item">
+        <p class="label">Tổng số công ty</p>
+        <p class="number">{{ totalCompanies | number }}</p>
       </div>
-      <div class="stat-box">
-        <h3>Tổng số Bài Đăng</h3>
-        <p>{{ totalRecruitments }}</p>
+  
+      <div class="dashboard-item">
+        <p class="label">Việc làm đang ứng</p>
+        <p class="number">{{ totalRecruitments | number }}</p>
       </div>
     </div>
+  </div>
 
+  <div class="container">
     <h2>Top Danh Mục</h2>
     <div class="categories">
       <div class="category" *ngFor="let category of categories" [routerLink]="['/recruitment', 'category', category.id]"
