--- a/Web_Client/src/app/feature/profile/profile.component.css
+++ b/Web_Client/src/app/feature/profile/profile.component.css
@@ -72,7 +72,7 @@ header {
     width: 100%;
     max-width: 200px;
     padding: 8px;
-    border: 2px dashed #007bff; /* Viền nét đứt */
+    border: 2px dashed #007bff;
     border-radius: 5px;
     background-color: #f8f9fa;
     text-align: center;
